Switch to no-modules approach without NPM, webpack and all that bloat

--- a/crates/klopodavka-wasm/pkg/index.html
+++ b/crates/klopodavka-wasm/pkg/index.html
@@ -6,16 +6,18 @@
 </head>
 <body>
 <noscript>This page contains WebAssembly and javascript content, please enable javascript in your browser.</noscript>
-<script src="./pkg/klopodavka_wasm.js"></script>
+<script src="./klopodavka_wasm.js"></script>
 <script>
     // Generate wasm with `wasm-pack build --target no-modules` in this dir.
     async function run() {
-        await wasm_bindgen('./pkg/klopodavka_wasm_bg.wasm');
+        await wasm_bindgen('./klopodavka_wasm_bg.wasm');
 
         wasm_bindgen.greet();
     }
 
     run();
 </script>
+
+<h1>Hello from Klopodavka Wasm/Rust!</h1>
 </body>
 </html>
