Add Yew frontend

--- a/crates/klopodavka-yew/index.html
+++ b/crates/klopodavka-yew/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Yew</title>
+    <title>Klopdavka in Rust/WebAssembly</title>
     <script src="/pkg/bundle.js" defer></script>
 </head>
 
