Implementing Yew rendering

--- a/crates/klopodavka-yew/index.html
+++ b/crates/klopodavka-yew/index.html
@@ -4,7 +4,58 @@
 <head>
     <meta charset="utf-8" />
     <title>Klopdavka in Rust/WebAssembly</title>
-    <script src="/pkg/bundle.js" defer></script>
+    <script src="./pkg/bundle.js" defer></script>
+    <style type="text/css">
+        html, body {
+            height: 100%;
+        }
+
+        html {
+            display: table;
+            margin: auto;
+        }
+
+        body {
+            display: table-cell;
+            vertical-align: middle;
+        }
+
+        #notification-area {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+
+        #notification-area > div {
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 5px;
+        }
+
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+        }
+
+        tr {
+            border: 0;
+            padding: 0;
+            margin: 0;
+        }
+
+        td {
+            border: 1px solid #dbdbdb;
+            padding: 0;
+            margin: 0;
+            width: 25px;
+            height: 25px;
+            background-color: #fafafa;
+            vertical-align: middle;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
