fix body background

--- a/crates/klopodavka-yew/index.html
+++ b/crates/klopodavka-yew/index.html
@@ -18,20 +18,7 @@
         body {
             display: table-cell;
             vertical-align: middle;
-        }
-
-        #notification-area {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-
-        #notification-area > div {
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-bottom: 5px;
+            background: white;
         }
 
         table {
