--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Klopdavka in Rust/WebAssembly</title>
-    <script src="./pkg/bundle.js" defer></script>
+    <script src="bundle.js" defer></script>
     <style type="text/css">
         html, body {
             height: 100%;
