--- a/crates/klopodavka-yew/www/index.html
+++ b/crates/klopodavka-yew/www/index.html
@@ -42,6 +42,10 @@
             vertical-align: middle;
             text-align: center;
         }
+
+        .button {
+            margin-left: 10px;
+        }
     </style>
 </head>
 
